fix the overlapping issue + list styles.

--- a/doc/user/assets/sass/_content.scss
+++ b/doc/user/assets/sass/_content.scss
@@ -82,7 +82,7 @@ p + p {
         list-style-position: inside;
 
         li > p {
-            display: inline-block;
+            display: inline;
         }
     }
 
