--- a/doc/user/assets/sass/_layout.scss
+++ b/doc/user/assets/sass/_layout.scss
@@ -215,7 +215,7 @@
     font-size: var(--sm);
 
     &-top {
-        padding-top: var(--small);
+        margin-top: var(--pico);
     }
 
     h2 {
